@@ -2153,6 +2153,14 @@ solr.log.server = http://localhost:8080/solr/statistics
 # The location for the Geo Database retrieved on update/installation
 solr.dbfile = ${dspace.dir}/config/GeoLiteCity.dat
 
+# Timeout for the resolver in the dns lookup
+# Time in milliseconds, defaults to 200 for backward compatibility
+# Your systems default is usually set in /etc/resolv.conf and varies
+# between 2 to 5 seconds, to high a value might result in solr exhausting
+# your connection pool
+solr.resolver.timeout = 200
+
+
 # If enabled the statistics system will look for an X-Forward header
 # if it finds it, it will use this for the user IP Addrress
 # it is enabled by default
